istio/destination-rule.yaml
# destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: django-web
  namespace: django
spec:
  host: django-web.django.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
